--- a/src/content/creation/lightningrubellum/index.mdx
+++ b/src/content/creation/lightningrubellum/index.mdx
@@ -5,21 +5,16 @@ title: Lightning Rubellum
 
 ## キズナがつむぐ、花びらの舞。
 
-##### 力を司りし女神 はじめにあり。
-
-##### 力の荒ぶる結晶たる魔獣 はじめにあり。
-
-##### そして………… 勇者 ルベルム はじめにあり。
-
-##### これより つづられるは ルベルムの旅路。
-
-##### 女神の力と叡智 そして人の 優しさと
-
-##### 絆を 信じる 少女らの物語。
-
-##### 風よ もし届くならば この 乙女百合の物語を
-
-##### 謡いきれるよう 我に 力を お与えあれ！！
+<div className="mx-auto text-center">
+力を司りし女神 はじめにあり。<br />
+力の荒ぶる結晶たる魔獣 はじめにあり。<br />
+そして………… 勇者 ルベルム はじめにあり。<br />
+これより つづられるは ルベルムの旅路。<br />
+女神の力と叡智 そして人の 優しさと<br />
+絆を 信じる 少女らの物語。<br />
+風よ もし届くならば この 乙女百合の物語を<br />
+謡いきれるよう 我に 力を お与えあれ！！
+</div>
 
 ### [ABOUT/CREDIT](/creation/lightningrubellum/about)
 
@@ -39,16 +34,13 @@ title: Lightning Rubellum
 
 ### 開発日誌
 
-##### [2024年6月6日](https://magialabs.blog/blog/post/2024/20240606/)
-
-##### [2025年1月31日](https://magialabs.blog/blog/post/2025/20250131/)
-
-##### [2025年2月2日 - RPG開発日誌](https://magialabs.blog/blog/post/2025/20250202/)
-
-##### [2025年3月26日](https://magialabs.blog/blog/post/2025/20250326/)
-
-##### [2025年6月28日](https://magialabs.blog/blog/post/2025/20250628/)
-
-##### [2025年7月17日](https://magialabs.blog/blog/post/2025/20250717/)
+<div className="mx-auto text-center">
+[2024年6月6日](https://magialabs.blog/blog/post/2024/20240606/)<br />
+[2025年1月31日](https://magialabs.blog/blog/post/2025/20250131/)<br />
+[2025年2月2日 - RPG開発日誌](https://magialabs.blog/blog/post/2025/20250202/)<br />
+[2025年3月26日](https://magialabs.blog/blog/post/2025/20250326/)<br />
+[2025年6月28日](https://magialabs.blog/blog/post/2025/20250628/)<br />
+[2025年7月17日](https://magialabs.blog/blog/post/2025/20250717/)
+</div>
 
 サイト付属ブログの本作開発作業へのリンク集。画面は開発中のものです。
