ラスダンとエンディングを一応CO

--- a/src/content/creation/lightningrubellum/special.mdx
+++ b/src/content/creation/lightningrubellum/special.mdx
@@ -45,12 +45,12 @@ import AudioPlayer from '../../../components/AudioPlayer.astro';
 <AudioPlayer src="lr/LR_MAP6.mp3" title="大神殿の試練 - Ordeal of Legendary Palace" />
 <AudioPlayer src="lr/LR_EVN7.mp3" title="宿命の巫女カレン - Calen of the Destiny" />
 <AudioPlayer src="lr/LR_MAP7.mp3" title="時の歯車 - Clock Tower" />
-<AudioPlayer src="lr/LR_MAP10.mp3" title="次元の歩み - The Road to the Magic Core" />
+{/* <AudioPlayer src="lr/LR_MAP10.mp3" title="次元の歩み - The Road to the Magic Core" />
 <AudioPlayer src="lr/LR_BTL5.mp3" title="暗闇の向こう - Battle to the Legend" />
 <AudioPlayer src="lr/LR_BTL4.mp3" title="雷光の女神 - The Final Wars" />
 <AudioPlayer src="lr/LR_EVN11.mp3" title="新しい世界 - After End Final Battle" />
 <AudioPlayer src="lr/LR_EVN12.mp3" title="いとしいひとに - Epilogue 1" />
 <AudioPlayer src="lr/LR_EVN13.mp3" title="あなたとなら - Epilogue 2" />
-<AudioPlayer src="lr/LR_EVN14.mp3" title="好奇心の旅立ち - Lightning Rubellum" />
+<AudioPlayer src="lr/LR_EVN14.mp3" title="好奇心の旅立ち - Lightning Rubellum" /> */}
 <AudioPlayer src="lr/LR_ME1.mp3" title="重要アイテムファンファーレ - Lucky!!" />
 <AudioPlayer src="lr/LR_FLD1.mp3" title="(Bonus)光の乙女たち - Daytime Street" />
