--- a/src/content/text/infomation.mdx
+++ b/src/content/text/infomation.mdx
@@ -116,6 +116,8 @@ A. **このサイト自体は全年齢対象ですが、SNS「魔女喫茶クロ
 
 | 日付         | 内容                                          |
 | :--------- | :------------------------------------------ |
+| 2025/10/23 | サーバーテーマリフォーム                    |
+| 2025/07/01 | サーバー移し替え                                    |
 | 2025/03/30 | ここ（インフォ）を作成。ページトップに戻るボタン作成。                 |
 | 2025/03/26 | サイトを自宅鯖に移行、爆速に。トップの最新記事が最新記事にならない不具合修正。     |
 | 2024/09/22 | サイト名を「Magia Laboratory」に                    |
@@ -123,4 +125,3 @@ A. **このサイト自体は全年齢対象ですが、SNS「魔女喫茶クロ
 | 2024/06/02 | 更新履歴整備                                      |
 | 2024/04/20 | 雑記置き追加                                      |
 | 2024/02/06 | **リニューアルオープン**。別館と統合                        |
-| 2025/07/01 | サーバー移し替え                                    |
