Giscusいらなくなった

--- a/src/content/text/infomation.mdx
+++ b/src/content/text/infomation.mdx
@@ -27,7 +27,7 @@ Q. サイトコンテンツを保存・印刷していいですか？\
 A. **「個人の非営利範囲」での使用ならおっけーです**。
 
 Q. コンテンツの情報提供をしたい・感想やツッコミを投げたいのですが？\
-A. **トップページのメールフォームから受け付けています**。可能な限り返信もしたいですが、手が回らない場合は申し訳ございません。その場合もちゃんと読んでいます。
+A. **トップページのメールフォームおよび[BBS](https://bbs.magialabs.blog/)から受け付けています**。可能な限り返信もしたいですが、手が回らない場合は申し訳ございません。その場合もちゃんと読んでいます。
 
 Q. サイトオリジナルコンテンツの二次創作は可能ですか？\
 A. **どうぞ歓迎いたします**。基本的に何してもいいですが、ガイドラインはあります。すぐ下にあるのでご覧ください。
